fixed overlay not showing and N/A to show for empty date delivered entries in details pop-up

--- a/resources/css/missionsPage.css
+++ b/resources/css/missionsPage.css
@@ -197,12 +197,15 @@
 }
 
 /* MISSION DETAILS POP-UP MODAL */
-/* TODO: fix this as it is not showing */
 .mission-modal-overlay {
     position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 11;
-    cursor: pointer;
+    display: block;
 }
 
 .mission-details-modal {
